Fix call to action background overflow

--- a/ietf/static_src/css/snippets/mailing_list_signup.scss
+++ b/ietf/static_src/css/snippets/mailing_list_signup.scss
@@ -10,6 +10,7 @@
         color: rgba($white, 0.05);
         font-size: 30em;
         line-height: 0.5;
+        overflow: hidden;
     }
     // Sets children position so the absolutely position background icon stays in the background
     & > * {
